--- a/src/main/resources/templates/user.html
+++ b/src/main/resources/templates/user.html
@@ -34,10 +34,10 @@
       <div class="row m-5 p-3">
         <form class="col m-5 p-3">
           <p class="h3">当前空调状态</p>
-          <div class="form-group d-flex">
+          <!--<div class="form-group d-flex">
             <label class="d-block">模式</label>
             <input class="form-control" disabled />
-          </div>
+          </div>-->
           <div class="form-group d-flex">
             <label class="inline-block">温度</label>
             <input class="form-control" disabled />
@@ -49,10 +49,10 @@
         </form>
         <form class="col m-5 p-3">
           <p class="h3 text-right">目标设置</p>
-          <div class="form-group d-flex">
+          <!--<div class="form-group d-flex">
             <label class="d-block">模式</label>
             <input class="form-control" />
-          </div>
+          </div>-->
           <div class="form-group d-flex">
             <label class="inline-block">温度</label>
             <input class="form-control" />
