--- a/src/main/resources/Templates/index.html
+++ b/src/main/resources/Templates/index.html
@@ -76,7 +76,7 @@
           >
         </a>
         <a
-          href="bill.html"
+          href="record.html"
           class="col m-5 blue3 text-decoration-none d-flex flex-column align-items-center justify-content-around"
         >
           <span>
