--- a/src/main/resources/templates/admin.html
+++ b/src/main/resources/templates/admin.html
@@ -11,7 +11,7 @@
       integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk"
       crossorigin="anonymous"
     />
-    <link rel="stylesheet" href="../../../../../../hotel_FP3.0/css/style.css" />
+    <link rel="stylesheet" href="../Static/css/style.css" />
     <style>
       h1 {
         box-shadow: 20px 20px 3px #b3bacc;
