--- a/src/main/resources/templates/manager.html
+++ b/src/main/resources/templates/manager.html
@@ -10,7 +10,7 @@
     integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous" />
   <link href="http://www.bootcss.com/p/bootstrap-datetimepicker/bootstrap-datetimepicker/css/datetimepicker.css"
     rel="stylesheet" />
-  <link rel="stylesheet" href="../../java/admin/demo/css/style.css" />
+  <link rel="stylesheet" href="../Static/css/style.css" />
   <script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
   <script src="http://cdn.bootcss.com/bootstrap/3.3.0/js/bootstrap.min.js"></script>
   <script
@@ -52,7 +52,7 @@
         <tr>
           <th scope="col">机号</th>
           <th scope="col">运行时长</th>
-          <th scope="col">产生费用</th>
+          <th scope="col">产生费 用</th>
         </tr>
       </thead>
       <tbody>
