Modify some front pages and form input info.

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -81,7 +81,16 @@
         >
           <span>
             查看用户<br /><br />
-            <br />使用情况</span
+            <br />使用详单</span
+          >
+        </a>
+        <a
+                href="billPage.html"
+                class="col m-5 blue3 text-decoration-none d-flex flex-column align-items-center justify-content-around"
+        >
+          <span>
+            查看用户<br /><br />
+            <br />账单信息</span
           >
         </a>
       </div>
