Modify some front pages and form input info.

--- a/src/main/resources/templates/checkOut.html
+++ b/src/main/resources/templates/checkOut.html
@@ -31,8 +31,8 @@
       <div class="row my-5 p-5">
         <form class="col-8 m-auto p-5">
           <div class="form-group d-flex">
-            <label class="d-block">用户名</label>
-            <input class="form-control" placeholder="请输入用户名" />
+            <label class="d-block">用户id</label>
+            <input class="form-control" placeholder="请输入用户id" />
           </div>
           <div class="form-group d-flex">
             <label class="inline-block">密&nbsp;&nbsp;&nbsp;&nbsp;码</label>
