--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -36,8 +36,8 @@
         <form class="col m-5 p-3">
           <p class="h3 py-2 m-auto">用户注册</p><br><br>
           <div class="form-group d-flex">
-            <label class="d-block">用户名</label>
-            <input class="form-control" placeholder="请输入用户名" />
+            <label class="d-block">用户id</label>
+            <input class="form-control" placeholder="请输入用户id" />
           </div>
           <div class="form-group d-flex">
             <label class="inline-block">密&nbsp;&nbsp;&nbsp;&nbsp;码</label>
@@ -65,8 +65,8 @@
         <form class="col m-5 p-3">
           <p class="h3 m-auto">用户登录</p><br></br>
           <div class="form-group d-flex">
-            <label>用户名</label>
-            <input class="form-control" placeholder="请输入用户名" />
+            <label>用户id</label>
+            <input class="form-control" placeholder="请输入用户id" />
           </div>
           <div class="form-group d-flex">
             <label>密&nbsp;&nbsp;&nbsp;&nbsp;码</label>
