--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -29,7 +29,27 @@
       }
     </style>
   </head>
-
+  <script src="js/jquery-1.11.1.js"></script>
+<script>
+  $(function () {
+    $("#login").click({
+      var id = $("#userId").val();
+      var password = $("#password").val();
+      $.ajax({
+        "url":"user/login",
+        "data":{
+          id:id,
+          password:password
+      },
+        success:function (data) {
+          if(data.success){
+            alert("登陆成功");
+          }
+        }
+      });
+    });
+  })
+</script>
   <body>
     <div class="container p-5">
       <div class="row my-5 p-3">
@@ -66,11 +86,12 @@
           <p class="h3 m-auto">用户登录</p><br></br>
           <div class="form-group d-flex">
             <label>用户id</label>
-            <input class="form-control" placeholder="请输入用户id" />
+            <input class="form-control" id="userId" placeholder="请输入用户id" />
           </div>
           <div class="form-group d-flex">
             <label>密&nbsp;&nbsp;&nbsp;&nbsp;码</label>
             <input
+                    id="password"
               type="password"
               class="form-control"
               placeholder="请输入密码"
@@ -78,7 +99,7 @@
           </div>
           <button
             id="login"
-            type="submit"
+            type="button"
             class="btn blue2 text-white d-block m-auto px-4"
           >
             登录
