更新login页面跳转 输入admin/123456前端判断（数据库中暂无管理员帐号）跳转到 admin.html； 输入用户账户，分配的roomid存到session中，跳转user.html

--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -98,21 +98,27 @@
     $("#login").click(function () {
       var userId = $("#userId").val();
       var password = $("#password").val();
-      $.ajax({
-        "type":"post",
-        "url":"http://localhost:8080/user/login",
-        "data":{
-          userId:userId,
-          password:password
-        },
-        success:function (data) {
-          if(data.success){
-            alert("登陆成功");
-          }else{
-            alert(data.message);
-          }
-        }
-      });
+       if(userId==='admin'&&password==='123456')
+       {location.href="admin.html";}
+       else {
+         $.ajax({
+           "type": "post",
+           "url": "http://localhost:8080/user/login",
+           "data": {
+             userId: userId,
+             password: password
+           },
+           success: function (data) {
+             if (data.success) {
+               sessionStorage.setItem('roomid',data.result.roomId);
+               alert("登陆成功");
+               location.href="user.html"
+             } else {
+               alert(data.message);
+             }
+           }
+         });
+       }
     });
     $("#register").click(function () {
       var uid = $("#uid").val();
