--- a/src/main/resources/templates/checkOut.html
+++ b/src/main/resources/templates/checkOut.html
@@ -32,18 +32,20 @@
         <form class="col-8 m-auto p-5">
           <div class="form-group d-flex">
             <label class="d-block">用户id</label>
-            <input class="form-control" placeholder="请输入用户id" />
+            <input  id="userId" class="form-control" placeholder="请输入用户id" />
           </div>
           <div class="form-group d-flex">
             <label class="inline-block">密&nbsp;&nbsp;&nbsp;&nbsp;码</label>
             <input
+                    id="password"
               type="password"
               class="form-control"
               placeholder="请输入密码"
             />
           </div>
           <button
-            type="submit"
+                  id="tf"
+            type="button"
             class="btn blue2 text-white d-block m-auto px-4"
           >
             确认退房
@@ -54,4 +56,31 @@
 
     <a href="index.html" class="back-btn">Back</a>
   </body>
+  <script src="../Static/js/jquery-1.11.1.js"></script>
+ <script>
+   $(function () {
+
+     $("#tf").click(function () {
+       var userId = $("#userId").val();
+       var password = $("#password").val();
+         $.ajax({
+           "type": "post",
+           "url": "http://localhost:8080/user/checkout",
+           "data": {
+             userId: userId,
+             password: password
+           },
+           success: function (data) {
+             if (data.success) {
+               alert("退房成功");
+             } else {
+               alert(data.message);
+             }
+           }
+         });
+
+     });
+
+   })
+ </script>
 </html>
