--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -67,6 +67,8 @@
     </form>
     <form class="col m-5 p-3">
       <p class="h3 m-auto">用户登录</p><br></br>
+      <!--/*@thymesVar id="roominfo" type=""*/-->
+      <input id="room" th:value="${roominfo}" type="hidden"/>
       <div class="form-group d-flex">
         <label>用户id</label>
         <input class="form-control" id="userId" placeholder="请输入用户id" />
@@ -98,9 +100,8 @@
     $("#login").click(function () {
       var userId = $("#userId").val();
       var password = $("#password").val();
-       if(userId==='admin'&&password==='123456')
-       {location.href="admin.html";}
-       else {
+
+
          $.ajax({
            "type": "post",
            "url": "http://localhost:8080/user/login",
@@ -110,15 +111,25 @@
            },
            success: function (data) {
              if (data.success) {
-               sessionStorage.setItem('roomid',data.result.roomId);
-               alert("登陆成功");
-               location.href="user.html"
-             } else {
-               alert(data.message);
+               var conditioner=$("room").val();
+               console.log(conditioner);
+               //conditioner= $("#room").val();
+              // sessionStorage.setItem('roomid',conditioner);
+               //alert("登陆成功"+conditioner);
+               //location.href="user.html"
+             }
+             else {
+               if(data.message=="admin")
+               {location.href="admin.html";
+                 alert("欢迎管理员登录");}
+               else if(data.message=="manager")
+               {location.href="manager.html";
+                 alert("欢迎酒店经理登录");}
+               else
+               {alert(data.message)};
              }
            }
          });
-       }
     });
     $("#register").click(function () {
       var uid = $("#uid").val();
