--- a/src/main/resources/templates/billPage.html
+++ b/src/main/resources/templates/billPage.html
@@ -8,7 +8,7 @@
 
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.0/dist/css/bootstrap.min.css"
           integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous"/>
-    <link rel="stylesheet" href="../Static/css/style.css"/>
+    <link rel="stylesheet" href="css/style.css"/>
     <style>
         label {
             min-width: 100px;
