--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -11,7 +11,7 @@
           integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk"
           crossorigin="anonymous"
   />
-  <link rel="stylesheet" href="css/style.css" />
+  <link rel="stylesheet" href="../static/css/style.css" th:href="@{/css/style.css}"/>
 
   <style>
     form {
@@ -65,7 +65,7 @@
         注册
       </button>
     </form>
-    <form class="col m-5 p-3">
+    <form class="col m-5 p-3" th:href="@{/user/login}">
       <p class="h3 m-auto">用户登录</p><br></br>
       <div class="form-group d-flex">
         <label>用户id</label>
